# Terra

./: .gitignore  CMakeLists.txt  README.md  Terra.sln  Terra.vcxproj  Terra.vcxproj.filters
CMakeModules/: FindASSIMP.cmake  FindSDL2.cmake  FindZLIB.cmake
Scripts/: Build_Debug.bat  Build_Release.bat  Config.bat  ConfigAndBuildDependencies.bat  Config_FinalBuild.bat  CopyDllsToAppDir_Debug.bat  CopyDllsToAppDir_Release.bat
Terra/: CMakeLists.txt  Main.cpp  Win32Application.cpp
TerraRenderer/: CMakeLists.txt  D3D12HelloTriangle.cpp  DXSample.cpp  DXSampleHelper.h
src/: D3D12HelloTriangle.cpp
