CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(Terra)

FILE(GLOB SRC_FILES 
	${PROJECT_SOURCE_DIR}/*.cpp
	${PROJECT_SOURCE_DIR}/*.h
)

FILE(GLOB SHADER_FILES 
	${CMAKE_SOURCE_DIR}/Media/Shaders/*.hlsl
)

SOURCE_GROUP("Shaders"  FILES ${SHADER_FILES})
SET_SOURCE_FILES_PROPERTIES(${SHADER_FILES} PROPERTIES VS_TOOL_OVERRIDE "Text")

ADD_EXECUTABLE(${PROJECT_NAME}
	${SRC_FILES}
	${SHADER_FILES}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC
	d3d12.lib
    dxgi.lib
    dxguid.lib
	D3DCompiler.lib
	${FREETYPE_LIBRARY}
	debug		"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug/TerraRenderer_d.lib"
	optimized 	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Release/TerraRenderer.lib"
	)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}
	"${CMAKE_SOURCE_DIR}/TerraRenderer"
	)